--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 services:
 
         build_database:
-                build: BD
+                build: database
                 environment:
                         - MYSQL_ROOT_PASSWORD=test123
+                ports:
+                        - "3307:3306"
